--- a/src/app/admin/add-edit-product/add-edit-product.component.html
+++ b/src/app/admin/add-edit-product/add-edit-product.component.html
@@ -58,7 +58,7 @@
             </mat-form-field>
 
             <mat-form-field appearance="fill">
-                <mat-label>Product Cost</mat-label>
+                <mat-label>Product Price</mat-label>
                 <input formControlName="product_cost_price" matInput placeholder="Cost Price" type="number">
             </mat-form-field>
 
