--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -91,7 +91,7 @@
             </div>
         </a>
 
-        <a routerLink="/material-handover">
+        <a routerLink="/material_handover">
             <div class="thumbnail">
                 <mat-icon>gradient</mat-icon><br>
                 <span style="color:	rgb(255, 255, 255)"><b>{{total_mh}}</b></span><br>
@@ -126,7 +126,7 @@
         <a routerLink="/dues">
             <div class="thumbnail">
                 <mat-icon>payment</mat-icon><br>
-                <span style="color:	rgb(255, 255, 255)"><b>{{total_dues}}</b></span><br>
+                <span style="color:	rgb(255, 255, 255)"><b>{{defult}}</b></span><br>
                 <span style="color:#14595c;">Dues</span>
             </div>
         </a>
@@ -142,7 +142,7 @@
         <a routerLink="/account">
             <div class="thumbnail">
                 <mat-icon>account_circle</mat-icon><br>
-                <span style="color:	rgb(255, 255, 255)"><b>{{total_account}}</b></span><br>
+                <span style="color:	rgb(255, 255, 255)"><b>{{defult}}</b></span><br>
                 <span style="color:#14595c;">Account</span>
             </div>
         </a>
@@ -150,9 +150,7 @@
         <a routerLink="/expense">
             <div class="thumbnail">
                 <mat-icon>monetization_on</mat-icon><br>
-                <span style="color:	rgb(255, 255, 255)"><b>{{total_expense}}</b></span><br>
+                <span style="color:	rgb(255, 255, 255)"><b>{{defult}}</b></span><br>
                 <span style="color:#14595c;">Expense</span>
             </div>
         </a>
-
-       
