--- a/src/app/admin/product/product.component.html
+++ b/src/app/admin/product/product.component.html
@@ -45,7 +45,7 @@
               <td class="data" mat-cell *matCellDef="let row">{{row.product_produ_cost}}</td>
             </ng-container>
             <ng-container matColumnDef="product_cost_price">
-              <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Cost Price</th>
+              <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Product Price</th>
               <td class="data" mat-cell *matCellDef="let row">{{row.product_cost_price}}</td>
             </ng-container>
 
