--- a/src/app/admin/add-edit-sale/add-edit-sale.component.html
+++ b/src/app/admin/add-edit-sale/add-edit-sale.component.html
@@ -125,7 +125,7 @@
 									(keyup)="desc_amt_cal()">
 							</mat-form-field>
 						</div>
-						<div class="column">
+						<div class="column_first">
 
 							<mat-form-field appearance="fill">
 								<mat-label>Quantity</mat-label>
