--- a/src/app/loginpage/loginpage.component.html
+++ b/src/app/loginpage/loginpage.component.html
@@ -27,5 +27,6 @@
         </mat-card-actions>
         <p>Forgot Password</p>
       </mat-card>
-      <div class="footer">Powered By :-  <a  href="https://www.greensoft.net.in/">Green Soft</a></div>
+      
+      <div class="footer">Powered By :-  <a  href="https://www.greensoft.net.in/">Green Soft</a> version: 0.01</div>
 </div>
