--- a/src/app/loginpage/loginpage.component.css
+++ b/src/app/loginpage/loginpage.component.css
@@ -47,13 +47,13 @@ mat-form-field mat-label {
 
 .icon_1{
     position: relative;
-    top:25px;
+    top:52px;
     right: 4px;
 }
 
 .icon_2{
     position: relative;
-    top: 70px;
+    top: 100px;
     right: 4px;
 }
 
@@ -76,9 +76,11 @@ p{
 .footer{
     width: 100%;
     height: 40px;
+    display: flex;
+    justify-content: space-between;
+    padding: 0px 40px;
     background-color:#14595c;
     color: white;
-    text-align: center;
     line-height: 40px;
     position: fixed;
     bottom: 0px;
@@ -101,6 +103,10 @@ p{
         font-size: 20px;
     }
     p{
+        font-size: 14px;
+    }
+    .footer{
+        padding: 0px 20px;
         font-size: 14px;
     }
 }
