--- a/src/app/loginpage/loginpage.component.html
+++ b/src/app/loginpage/loginpage.component.html
@@ -28,5 +28,5 @@
         <p>Forgot Password</p>
       </mat-card>
       
-      <div class="footer">Powered By :-  <a  href="https://www.greensoft.net.in/">Green Soft</a> version: 0.01</div>
+      <div class="footer"><p>Powered By :- </p><p> <a  href="https://www.greensoft.net.in/">Green Soft</a> version: 0.01</p></div>
 </div>
