--- a/src/app/loginpage/loginpage.component.css
+++ b/src/app/loginpage/loginpage.component.css
@@ -102,6 +102,9 @@ p{
     mat-card-header{
         font-size: 20px;
     }
+    mat-card-actions{
+        margin-left:95px;
+    }
     p{
         font-size: 14px;
     }
