--- a/src/app/admin/purchase-report/purchase-report.component.css
+++ b/src/app/admin/purchase-report/purchase-report.component.css
@@ -1,6 +1,9 @@
+#wrapper {
+    margin-top: 63px;
+}
+
 .view_notice {
     height: 40px;
-    margin-top: 63px;
     width: 100%;
     background-color: #0b4648;
     color: whitesmoke;
@@ -12,54 +15,57 @@
 
 #print_sale_report {
     position: relative;
-    top: -1px;
+    top: -5px;
     left: 2px;
     cursor: pointer;
 }
 
 .notice_text {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-style: italic;
+    font-size: 16px;
 }
 
-.count_search {
+/* .count_search {
     height: 40px;
-    width: 10%;
-    margin-top: 23px;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     padding: 10px 10px 0px 10px;
     box-sizing: border-box;
     color: #0d5e58;
    
-}
-
-.column{
+} */
+/* .count_search .notice_text {
+    font-size: 16px;
+} */
+/* .column{
     width: 177px;
     margin-top: 26px;
     height: 66px;
     padding-top: -1px;
-}
+    background-color: red;
+} */
 
 
-.search input {
+/* .search input {
     border-bottom: 1px solid #0a4547;
     outline: none;
     padding: 7px 2px 6px 7px;
-    float: right;
-    width: 119px;
-    margin-top: -34px;
+    background-color: whitesmoke;
     position: relative;
-    top: 2px;
+    top: -5px;
     left: 0px;
-}
+} */
 
-.text_box{
+.text_box {
     width: 152px;
     float: right;
     padding: 31px 2px 1px 5px;
     border-bottom: 1px solid black;
 }
- .text_boxe{
+
+/* .text_boxe{
     padding-left: 12px;
     width: 180px;
     padding-top: 5px;
@@ -69,42 +75,56 @@
     margin-top: 2px;
     border-bottom: 1px solid black;
     float: right;
-    background-color: #0000000A;
+    background-color: #c61b1b0a;
     font-size: 13px;
-} 
-.ppt{
+    
+}  */
+/* .ppt{
     right: 3%
-}
+} */
 
 mat-form-field {
     margin-right: 2px;
     width: 15%;
     height: 50px;
-   
-  }
-  mat-datepicker-toggle{
+
+}
+
+mat-datepicker-toggle {
     position: absolute;
     right: 4px;
     margin-top: -12px;
-  }
-  
-.notice_text {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-.search_area{
+
+/* .notice_text {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+} */
+.date_picar {
+    width: auto;
+    height: 50px;
+    float: left;
+}
+
+.date_picar mat-form-field {
+    width: 200px;
+}
+
+.search_area {
     width: 100%;
     height: 50px;
+    color: #0d5e58;
+
 }
 
 mat-icon {
     background-color: transparent;
     border: none;
     font-size: 20px;
-    line-height: 23px;
+    line-height: 30px;
 }
 
 #table {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     border-collapse: collapse;
     width: 100%;
 }
@@ -113,8 +133,8 @@ mat-icon {
     color: white;
     background-color: #0f575a;
     height: 40px;
-    font-weight: bold;
-    padding-left: 82px;
+    font-size: 16px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 tr:nth-child(even) {
@@ -132,27 +152,42 @@ tr:hover {
     cursor: pointer;
 }
 
+.mat-row:hover>.mat-cell {
+    color: white
+}
+
 ng-container {
     text-align: center;
 }
 
 .cotainer {
-    margin-top: 5px;
+    margin-top: 4px;
 }
 
-
-
-.data:hover {
-    color: white;
-}
-.footer_amount{
-    height:44px;
+.footer_amount {
+    /* height:44px;
     width: 100%;
     background-color: #0f575a;
-    margin-top:454px ; 
-  
+    margin-top:454px ;  */
+    width: 99.9%;
+    height: 44px;
+    position: absolute;
+    /* position: fixed; */
+    bottom: 0px;
+    /* margin-top: 452px; */
+    background-color: #0a4547;
+    overflow: hidden;
+    display: flex;
+    justify-content: space-between;
+    color: whitesmoke;
+    letter-spacing: 1px;
+    line-height: 47px;
+    padding: 0px 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
 }
-.total{    
+
+/* .total{    
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color:whitesmoke; 
     padding-left:129px;   
@@ -160,13 +195,204 @@ ng-container {
     line-height:45px;
     float:left;
     margin-left:5%;
-}
-form span{
+} */
+/* form span{
     width: 100px;
     height: 10px;
     font-size: 20px;
    
+} */
+
+
+
+/* //////////////////////////table media q//////////////////////////// */
+@media(min-width:800px) and (max-width:1180px) {
+    #wrapper {
+        overflow-x: hidden;
+    }
+
+    .cotainer {
+        overflow-x: auto;
+    }
+
+    mat-paginator {
+        position: absolute;
+        width: 100%;
+    }
+
+    .notice_text {
+        font-size: 14px;
+    }
+
+    .date_picar {
+        width: auto;
+        height: 50px;
+        float: left;
+    }
+
+    .date_picar mat-form-field {
+        width: 125px;
+    }
+
+    table th {
+        font-size: 14px;
+    }
+
+    table td {
+        font-size: 14px;
+    }
+
+    .footer_amount {
+        padding: 0px 15px;
+        font-size: 14px;
+        letter-spacing: 0.5px;
+
+    }
+
 }
+
+@media(min-width:461px) and (max-width:799px) {
+    #wrapper {
+        overflow-x: hidden;
+    }
+
+    .cotainer {
+        overflow-x: auto;
+    }
+
+    mat-paginator {
+        position: absolute;
+        width: 100%;
+    }
+
+    .notice_text {
+        font-size: 14px;
+    }
+
+    .search input {
+        width: 99%;
+        height: auto;
+        padding: 10px 0px 10px 10px;
+    }
+
+    .search_area {
+        width: 100%;
+        height: 90px;
+
+    }
+
+    .date_picar {
+        width: 100%;
+        height: 52px;
+        float: left;
+
+    }
+
+    .date_picar mat-form-field {
+        width: 32.9%;
+    }
+
+    table th {
+        font-size: 14px;
+    }
+
+    table td {
+        font-size: 14px;
+    }
+
+    .footer_amount {
+        padding: 0px 15px;
+        font-size: 14px;
+        letter-spacing: 0.5px;
+
+    }
+
+}
+
+@media (max-width:460px) {
+    #wrapper {
+        overflow-x: hidden;
+    }
+
+    .cotainer {
+        overflow-x: auto;
+    }
+
+    mat-paginator {
+        position: absolute;
+        width: 100%;
+    }
+
+    .notice_text {
+        font-size: 13px;
+    }
+
+    .search input {
+        width: 99%;
+        height: auto;
+        padding: 10px 0px 10px 10px;
+    }
+
+    .search_area {
+        width: 100%;
+        height: 90px;
+
+    }
+
+    .date_picar {
+        width: auto;
+        height: 52px;
+        float: left;
+    }
+
+    .date_picar mat-form-field {
+        width: 32.7%;
+    }
+
+    table th {
+        font-size: 13px;
+    }
+
+    table td {
+        font-size: 13px;
+    }
+
+    th.mat-header-cell:first-of-type {
+        padding-left: 13px;
+    }
+
+    th.mat-header-cell:last-of-type {
+        padding-right: 0px;
+        width: 0%;
+    }
+
+    td.mat-cell:first-of-type {
+        padding-left: 20px;
+    }
+
+    td.mat-cell:last-of-type {
+        padding-right: 0px;
+        padding-left: 10px;
+    }
+
+    .footer_amount {
+        padding: 0px 10px;
+        font-size: 13px;
+        letter-spacing: 0px;
+
+    }
+
+}
+
+
+
+
+
+
+
+
+
+
 /* ====================================================Media Query============================================== */
 
 /* 
@@ -380,7 +606,20 @@ form span{
     } */
 
 
-    @media(min-width: 280px) and (max-width: 350px){
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* @media(min-width: 280px) and (max-width: 350px){
    
         mat-form-field{
             width: 69px;
@@ -598,4 +837,4 @@ form span{
             .total{
                 padding-left: 91px;
             }
-        }
+        } */
