--- a/src/app/admin/stock-report/stock-report.component.css
+++ b/src/app/admin/stock-report/stock-report.component.css
@@ -40,12 +40,12 @@
 } */
 
 
-
+/* 
 .search_area{
     height: 50px;
-}
+} */
 
-.text_box{
+/* .text_box{
     width: 152px;
     margin-top: -1px;
     float: right;
@@ -53,34 +53,31 @@
     margin-left: 943px;
     padding: 31px 2px 1px 5px;
     border-bottom: 1px solid black;
-}
-
-
+} */
 
 
 
 .count_search {
-    height: 40px;
+    height: 53px;
     width: 100%;
     display: flex;
     justify-content: space-between;
-    padding: 10px 10px 0px 10px;
+    /* padding: 10px 10px 0px 10px; */
     box-sizing: border-box;
     color: #0d5e58;
-}
-
-.count_search .notice_text {
+} 
+ .count_search .notice_text {
     font-size: 16px;
 }
 .search input {
     border-bottom: 1px solid #0a4547;
     outline: none;
-    padding: 7px 2px 6px 7px;
+    padding: 7px 0px 6px 0px;
     background-color: whitesmoke;
     position: relative;
-    top: -5px;
+    top: 19px;
     left: 0px;
-}
+} 
 
 mat-icon {
     background-color: transparent;
@@ -124,26 +121,41 @@ tr:hover {
 ng-container {
     text-align: center;
 }
-
-.mat-form-field {
+.cotainer {
+    margin-top: 1px;
+}
+/* .mat-form-field {
     width: 180px;
     height: 20px;
-}
+} */
 
 .footer_amount {
-    width: 100%;
+    width:99.9%;
     height:44px;
-    position: fixed;
+    position: absolute;
+    /* position: fixed; */
     bottom: 0px;
     /* margin-top: 452px; */
     background-color: #0a4547;
+    overflow: hidden;
+    display: flex;
+    justify-content: space-between;
+    color: whitesmoke;
+    letter-spacing: 1px;   
+    line-height:47px; 
+    padding: 0px 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
 }
-.footer_amount span {  
+/* .footer_amount span {  
     color: whitesmoke;
     letter-spacing: 1px;   
     line-height:47px; 
     padding-left: 178px;
-}
+    padding-left: 10%;
+} */
+
+
 
 /* //////////////////////////table media q//////////////////////////// */
  @media(min-width:461px) and (max-width:1180px) {
@@ -166,13 +178,19 @@ ng-container {
     .count_search .notice_text {
         font-size: 14px;
     }
-
+  
     table th {
         font-size: 14px;
     }
 
     table td {
         font-size: 14px;
+    }
+    .footer_amount{
+        padding: 0px 15px;
+        font-size: 14px;
+        letter-spacing: 0.5px;   
+
     }
 
 }
@@ -199,7 +217,13 @@ ng-container {
     .count_search .notice_text {
         font-size: 13px;
     }
+    .count_search mat-form-field{
+        width: 150px;
+    }
 
+    .search{
+        width: 150px;
+    }
     table th {
         font-size: 13px;
     }
@@ -224,6 +248,12 @@ ng-container {
     td.mat-cell:last-of-type {
         padding-right: 0px;
         padding-left: 10px;
+    }
+    .footer_amount{
+        padding: 0px 10px;
+        font-size: 13px;
+        letter-spacing: 0px;   
+
     }
 
 } 
