--- a/src/app/admin/reciept/reciept.component.html
+++ b/src/app/admin/reciept/reciept.component.html
@@ -30,7 +30,7 @@
 
           <ng-container matColumnDef="reciept_Gross_amount">
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Back Dues</th>
-            <td class="data" mat-cell *matCellDef="let row">{{row.sale_dues}}</td>
+            <td class="data" mat-cell *matCellDef="let row">{{row.back_dues}}</td>
           </ng-container>
 
 
@@ -46,7 +46,7 @@
 
           <ng-container matColumnDef="reciept_current_dues">
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Current Date</th>
-            <td class="data" mat-cell *matCellDef="let row">{{row.dues_date}}</td>
+            <td class="data" mat-cell *matCellDef="let row">{{row.date}}</td>
           </ng-container>
 
 
