--- a/src/app/admin/sale-report/sale-report.component.html
+++ b/src/app/admin/sale-report/sale-report.component.html
@@ -47,52 +47,47 @@
 
           <ng-container matColumnDef="Custumber">
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Custumber</th>
-            <td class="data" mat-cell *matCellDef="let row">{{row.bill_number}}</td>
+            <td class="data" mat-cell *matCellDef="let row">{{row.cust_name}}</td>
           </ng-container>
 
           <ng-container matColumnDef="Bill_no">
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Bill number</th>
-            <td class="data" mat-cell *matCellDef="let row">{{row.product}}</td>
-          </ng-container>
-
-          <ng-container matColumnDef="product">
-            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Product</th>
-            <td class="data" mat-cell *matCellDef="let row">{{row.quantity}}</td>
+            <td class="data" mat-cell *matCellDef="let row">{{row.sale_bill_no}}</td>
           </ng-container>
 
           <ng-container matColumnDef="Basic_amount">
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Basic amount</th>
-            <td class="data" mat-cell *matCellDef="let row">{{row.cgst}}</td>
+            <td class="data" mat-cell *matCellDef="let row">{{row.sale_total_amount}}</td>
           </ng-container>
 
           <ng-container matColumnDef="discount">
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header> Discount</th>
-            <td class="data" mat-cell *matCellDef="let row">{{row.discount}}</td>
+            <td class="data" mat-cell *matCellDef="let row">{{row.sale_discount}}</td>
           </ng-container>
 
           <ng-container matColumnDef="Gst">
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>GST</th>
-            <td class="data" mat-cell *matCellDef="let row">{{row.Basic_amount}}</td>
+            <td class="data" mat-cell *matCellDef="let row">{{row.sale_gst}}</td>
           </ng-container>
 
           <ng-container matColumnDef="Paybale_amount">
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Paybill amount </th>
-            <td class="data" mat-cell *matCellDef="let row">{{row.sgst}}</td>
+            <td class="data" mat-cell *matCellDef="let row">{{row.sale_gross_amount}}</td>
           </ng-container>
 
           <ng-container matColumnDef="Paid">
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Paid</th>
-            <td class="data" mat-cell *matCellDef="let row">{{row.total_amount}}</td>
+            <td class="data" mat-cell *matCellDef="let row">{{row.sale_paid}}</td>
           </ng-container>
 
           <ng-container matColumnDef="Dues">
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Dues</th>
-            <td class="data" mat-cell *matCellDef="let row">{{row.total_amount}}</td>
+            <td class="data" mat-cell *matCellDef="let row">{{row.sale_dues}}</td>
           </ng-container>
 
           <ng-container matColumnDef="Date">
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
-            <td class="data" mat-cell *matCellDef="let row">{{row.total_amount}}</td>
+            <td class="data" mat-cell *matCellDef="let row">{{row.sale_date}}</td>
           </ng-container>
 
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
